[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/EnemigoAire.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Bat/Volando 01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Bat/Volando 02.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Bat/Volando 03.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Bat/Volando 04.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Bat/Muerte 01.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Bat/Muerte 02.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Bat/Muerte 03.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Bat/Muerte 04.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Bat/Muerte 05.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Bat/Muerte 06.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Bat/Muerte 07.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Movimiento",
"speed": 6.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Muerte",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 12 )

[node name="EnemigoAire" type="KinematicBody2D" groups=[
"persist",
"enemigo",
]]
scale = Vector2( 2, 2 )
collision_layer = 32
script = ExtResource( 1 )

[node name="AnimacionEnemigo" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Muerte"
playing = true

[node name="ColisionEnemigo" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 3.5 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimacionEnemigo" to="." method="_on_AnimacionEnemigo_animation_finished"]
